--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,7 @@
     box-sizing: border-box; /* Ensures padding doesn't affect overall width */
 }
 
-/* Define Color Scheme */
-/* Moon Phases Inspired Color Scheme */
-/* Sirin Labs Inspired Color Scheme */
+
 :root {
     --primary-color: rgb(0, 97, 224);   /* Main color for key elements */
     --secondary-color-1: rgb(0, 250, 233); /* Light accent color */
@@ -38,7 +36,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(0, 97, 224, 0.5), rgba(0, 97, 224, 0.5)), url('images/Fatai-musicbackground.jpg') center center / cover no-repeat;
+    background: linear-gradient(rgba(2, 86, 92, 0.7), rgba(0, 73, 174, 0.7)), url('images/Fatai-musicbackground.jpg') center center / cover no-repeat;
     z-index: -1;
 }
 .about-navbar nav {
@@ -47,7 +45,7 @@ body::before {
 
 
 nav {
-    background: var(--text-color-dark);
+    background: rgba(2, 18, 71, 0.7) ;
     color: var(--text-color-light);
     padding: 10px 20px;
     display: flex;
@@ -530,7 +528,7 @@ section .glitch-con h2.section-title {
     height: 100%;
     font-family: 'futura';
     line-height: 1.6;
-    color: var(--text-color-dark);
+    color: var(--text-color-light);
 }
 
 .music-container {
@@ -552,7 +550,7 @@ section .glitch-con h2.section-title {
 
 .music-item {
     position: relative;
-    background: var(--secondary-color-2);
+    background-color:#071369  ;
     padding: 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -575,7 +573,7 @@ section .glitch-con h2.section-title {
 }
 
 .music-item a {
-    color: var(--text-color-dark); /* Gold color */
+    color: var(--text-color-light); /* Gold color */
     text-decoration: underline;
     font-weight: 700;
     font-size: 0.9rem;
@@ -652,7 +650,7 @@ section .glitch-con h2.section-title {
     height: 100%;
     font-family: 'futura';
     line-height: 1.6;
-    color: var(--text-color-dark);
+    color: var(--text-color-light);
 }
 .merch-container {
     display: flex;
@@ -986,7 +984,7 @@ iframe {
 #contact {
     line-height: 1.6;
     padding: 50px 20px;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(2, 86, 92, 0.7);
     color: white;
     text-align: center;
 }
@@ -1066,8 +1064,9 @@ iframe {
 }
 
 .contact-btn {
-    background-color: #000; /* Transparent background */
-    border: 2px solid #f0efec; /* Gold border */
+    font-family: "Futura";
+    background-color: rgba( 0, 0, 0, 0.1); /* Transparent background */
+    border: 1px solid #f0efec; /* Gold border */
     color: #fff; /* Gold text */
     padding: 10px 20px; /* Padding for the button */
     font-size: 1.2rem; /* Font size */
