--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ body::before {
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(rgba(2, 86, 92, 0.7), rgba(0, 73, 174, 0.7)), url('images/Fatai-musicbackground.jpg') center center / cover no-repeat;
+    background: linear-gradient(rgba(60, 25, 25, 0.9), rgba(60, 25, 35, 0.9)), url('images/background-image2.jpg') center center / cover no-repeat;
     z-index: -1;
 }
 .about-navbar nav {
@@ -550,7 +550,7 @@ section .glitch-con h2.section-title {
 
 .music-item {
     position: relative;
-    background-color:#071369  ;
+    background-color:#d3c0c0  ;
     padding: 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -696,7 +696,7 @@ section .glitch-con h2.section-title {
     margin: 20px auto;
     padding: 15px 30px;
     font-size: 1.2rem;
-    color: var(--text-color-dark);
+    color: var(--text-color-light);
     background-color: transparent;
     border: 2px solid white;
     border-radius: 5px;
@@ -984,7 +984,7 @@ iframe {
 #contact {
     line-height: 1.6;
     padding: 50px 20px;
-    background: rgba(2, 86, 92, 0.7);
+    background: rgba(37, 0, 0, 0.7);
     color: white;
     text-align: center;
 }
