--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
 
 
 body {
-  
+    background:#100000;
     color: var(--text-color-dark);
     font-family: 'Futura', sans-serif;
     margin: 0;
@@ -30,6 +30,8 @@ body {
     position: relative;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
+
+/*
 body::before {
     content: '';
     position: fixed;
@@ -40,13 +42,14 @@ body::before {
     background: linear-gradient(rgba(60, 25, 25, 10), rgba(60, 25, 35, 10));
     z-index: -1;
 }
+*/
 .about-navbar nav {
     position: relative;
 }
 
 
 nav {
-    background:#140028 ;
+    background:#000 ;
     color: var(--text-color-light);
     padding: 10px 20px;
     display: flex;
@@ -1196,7 +1199,7 @@ iframe {
 
 /* Footer */
 footer {
-    background-color:#140028; /* Dark charcoal background */
+    background: rgba(37, 0, 0, 0.7);
     color: white;
     text-align: center;
     padding: 20px 0;
