--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,6 @@ nav .social-icons a {
     display:inline-block
 }
 
-
 nav .mainMenu li a {
     font-family: 'Futura';
     font-weight: 500;
@@ -331,7 +330,7 @@ section .glitch-con h2.section-title {
   
   .glitch::before {
     left: 2px;
-    text-shadow: -2px 0 rgb(0, 21, 255);
+    text-shadow: -2px 0 rgb(255, 0, 0);
     clip: rect(24px, 550px, 90px, 0);
     animation: glitch-before 10s infinite linear alternate-reverse;
   }
@@ -988,7 +987,6 @@ iframe {
 #contact {
     line-height: 1.6;
     padding: 50px 20px;
-    background: rgba(37, 0, 0, 0.7);
     color: white;
     text-align: center;
 }
@@ -1199,7 +1197,7 @@ iframe {
 
 /* Footer */
 footer {
-    background: rgba(37, 0, 0, 0.7);
+    background: #000;
     color: white;
     text-align: center;
     padding: 20px 0;
@@ -2007,10 +2005,6 @@ img {
 }
 
 
-
-
-
-
 @media (max-width: 768px) {
 
   /* Navbar Section */
@@ -2120,6 +2114,45 @@ nav .closeMenu {
 @media (max-width: 480px) {
 
     
+  /* Navbar Section */
+nav .mainMenu { display: none; }
+nav .openMenu { display: block; }
+nav .social-icons { display: none; }
+.mainMenu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.85); /* Semi-transparent black background */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-100%);
+    transition: transform 0.3s ease-in-out;
+}
+
+nav .mainMenu.expanded {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    transform: translateY(0);
+    position: absolute;
+    top: 20px; /* Height of the nav bar */
+    left: 0;
+    background: #000;
+}
+nav .logo img {
+    width: 65px;
+}
+nav .closeMenu {
+    display: block;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+
     .action-btn {
         top: 56%;
     }
