--- a/styles.css
+++ b/styles.css
@@ -772,10 +772,13 @@ iframe {
 }
 
 .gallery-container {
+    display: flex;
+    justify-content: space-between;
     margin: 20px;
 }
 
 .gallery-item {
+    width: 35%;
     flex: 1 1 calc(25% - 40px); /* Four items per row, adjust as needed */
     margin: 10px;
     position: relative; /* Add this to position the artist's name absolutely */
@@ -785,6 +788,10 @@ iframe {
     transition: transform 0.3s ease;
 }
 
+.gallery-text {
+    width: 55%;
+    margin-top: 20%;
+}
 .gallery-item img {
     width: 100%;
     height: auto;
@@ -816,11 +823,33 @@ iframe {
     .gallery-item {
         flex: 1 1 calc(50% - 20px); /* Two items per row on smaller screens */
     }
+    .gallery-text h2{
+        font-size: 1.8rem;
+    }
+    .gallery-container{
+        margin: 0;
+    }
 }
 
 @media (max-width: 480px) {
     .gallery-item {
         flex: 1 1 100%; /* One item per row on very small screens */
+    }
+    .gallery-item h3{
+        font-size: 0.6rem;
+        padding: 4px 6px;
+
+    }
+    .gallery-text h2{
+        font-size: 1rem;
+    }
+    .gallery-text .shop-btn {
+    margin: 10px auto;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+    }
+    #gallery .glitch-con {
+        margin-bottom: 50px;
     }
 }
 
