--- a/styles.css
+++ b/styles.css
@@ -765,7 +765,9 @@ iframe {
     flex: 1 1 45%; /* Iframe takes up 45% of the width */
     max-width: 100%;
 }
-
+hr {
+    color: red;
+}
 #gallery {
     padding:20px;
     width: 100%;
@@ -775,10 +777,12 @@ iframe {
     display: flex;
     justify-content: space-between;
     margin: 20px;
+    padding: 20px;
 }
 
 .gallery-item {
     width: 35%;
+    height: 70%;
     flex: 1 1 calc(25% - 40px); /* Four items per row, adjust as needed */
     margin: 10px;
     position: relative; /* Add this to position the artist's name absolutely */
@@ -832,6 +836,10 @@ iframe {
 }
 
 @media (max-width: 480px) {
+    .gallery-container{
+        padding: 0;
+        margin-top: 20px;
+    }
     .gallery-item {
         flex: 1 1 100%; /* One item per row on very small screens */
     }
@@ -848,9 +856,7 @@ iframe {
     padding: 5px 10px;
     font-size: 0.8rem;
     }
-    #gallery .glitch-con {
-        margin-bottom: 50px;
-    }
+    
 }
 
 
@@ -1014,6 +1020,7 @@ iframe {
     padding: 50px 20px;
     color: white;
     text-align: center;
+    background-color: #333;
 }
 
 .contact-container {
