--- a/styles.css
+++ b/styles.css
@@ -854,20 +854,23 @@ hr {
     .gallery-item {
         flex: 1 1 100%; /* One item per row on very small screens */
     }
-    .gallery-item h3{
+
+    .gallery-text {
+        display: none;
+    }
+    /*.gallery-item h3{
         font-size: 0.6rem;
         padding: 4px 6px;
 
     }
     .gallery-text h2{
         font-size: 1rem;
-        text-align: center;
     }
     .gallery-text .shop-btn {
     margin: 10px auto;
     padding: 5px 10px;
     font-size: 0.8rem;
-    }
+    }*/
     
 }
 
