--- a/styles.css
+++ b/styles.css
@@ -552,7 +552,7 @@ section .glitch-con h2.section-title {
 
 .music-item {
     position: relative;
-    background-color:rgb(129, 194, 235)  ;
+    background-color:rgb(129, 228, 235)  ;
     padding: 20px;
     border-radius: 10px;
     overflow: hidden;
@@ -575,6 +575,7 @@ section .glitch-con h2.section-title {
 }
 
 .music-item a {
+    
     color: var(--text-color-light); /* Gold color */
     text-decoration: underline;
     font-weight: 700;
@@ -1800,10 +1801,14 @@ img {
     height: auto;
 }
 
+
 .music-main1 {
     padding: 20px;
     color: #000;
     text-align: center;
+    margin-top: 40px;
+    margin-bottom: 40px;
+
 }
 
 
@@ -1816,6 +1821,8 @@ img {
 
 
 .music-item1 {
+    color: #FFF;
+    font-family: 'Futura';
     position: relative;
     padding: 20px;
     border-radius: 10px; /* Make the container have rounded corners */
@@ -1825,18 +1832,21 @@ img {
     flex-direction: column;
     align-items: center;
 }
-
 .music-main1 h2{
-    font-family: "futura";
+    font-family: "Londrina Outline", cursive;
     font-weight: 900;
     font-size: 3rem;
 }
 .music-item1 img {
     width: 100%;
+    height: 100%;
     max-width: 200px; /* Adjust the maximum width as needed */
     height: auto;
-    border-radius: 50%; /* Make the image round */
+    border-radius: 50%;
+    border: 1px solid #fff;
     transition: transform 0.3s ease-in-out;
+    object-fit: cover;
+    object-position: center;
 }
 
 .music-item1 img:hover {
@@ -1869,6 +1879,7 @@ img {
 }
 
 @media (max-width: 500px) {
+    
     .music-main1 h2{
         font-weight: 900;
         font-size: 2.5rem;
@@ -1916,7 +1927,7 @@ img {
 .music-video-section {
     text-align: center;
     padding: 40px 20px;
-    background-color: rgba(0, 0, 0, 0.1);  /* A slightly different background for visual separation */
+    background-color: #f0ebeb1a;  /* A slightly different background for visual separation */
 }
 
 .music-video-section h2 {
@@ -1930,11 +1941,13 @@ img {
     justify-content: space-between;
     gap: 20px;
     flex-wrap: wrap;
+    text-align: center;
 }
 
 .video {
     background-color: #000;
     padding: 15px;
+    margin-bottom: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0,0,0,0.1);
     width: 100%; /* Responsive width */
@@ -1953,7 +1966,11 @@ img {
 }
 
 
+
+
 /* Artists Profile*/
+
+
 
 .artist-profile {
     padding: 40px 20px;
