--- a/styles.css
+++ b/styles.css
@@ -576,7 +576,7 @@ section .glitch-con h2.section-title {
 
 .music-item a {
     
-    color: var(--text-color-light); /* Gold color */
+    color: #fff; /* Gold color */
     text-decoration: underline;
     font-weight: 700;
     font-size: 0.9rem;
@@ -684,6 +684,7 @@ section .glitch-con h2.section-title {
     width: 40%;
 }
 .merch-text h2 {
+    font-family: "Londrina Outline", cursive;
     font-size: 2rem;
     margin-bottom: 10px;
     color: var(--text-color-light);
@@ -694,12 +695,11 @@ section .glitch-con h2.section-title {
 }
 .shop-btn {
     font-family: 'Futura', sans-serif;
-
     display: block;
     margin: 20px auto;
     padding: 15px 30px;
     font-size: 1.2rem;
-    color: var(--text-color-light);
+    color: rgb(204, 201, 2);
     background-color: transparent;
     border: 2px solid white;
     border-radius: 5px;
@@ -1089,8 +1089,12 @@ hr {
     font-family: 'Futura';
     flex: 1 1 calc(50% - 20px);
     padding: 20px;
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.8);
     border-radius: 10px;
+}
+.contact-container h2{
+    font-family: "Londrina Outline", cursive;
+
 }
 .contact-details h3{
     margin-bottom: 10px;
@@ -1795,10 +1799,18 @@ img {
     padding: 20px;
 }
 
+.music-main{
+    width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
 
 .music-main img{
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+
 }
 
 
@@ -1827,6 +1839,7 @@ img {
     width: calc(25% - 20px); /* Four items per row */
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     align-items: center;
 }
 .music-main1 h2{
@@ -1935,13 +1948,14 @@ img {
 
 .videos {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     gap: 20px;
     flex-wrap: wrap;
-    text-align: center;
 }
 
 .video {
+    margin-left: auto;
+    margin-right: auto;
     background-color: #000;
     padding: 15px;
     margin-bottom: 20px;
@@ -2260,6 +2274,11 @@ nav .closeMenu {
         flex-direction: column;
         align-items:stretch;
     }
+
+    .copyrights p{
+        font-size: 0.5rem;
+    }
+
     h2 {
         font-size: 2em; /* Slightly smaller font size for the heading */
     }
